--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/chai-spies": "^1.0.3",
+    "@types/sequelize": "^4.28.11",
     "chai-spies": "^1.0.0",
+    "dotenv": "^16.0.0",
+    "pg": "^8.7.3",
     "pino": "^7.8.0",
+    "pino-postgres": "^0.0.33",
+    "sequelize": "^6.17.0",
+    "through2": "^4.0.2",
     "ts-node": "^10.6.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
