--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^17.0.21",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^9.2.1"
+    "mocha": "^9.2.1",
+    "sequelize-cli": "^6.4.1"
   }
 }
