--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/hapi": "^20.2.1",
     "@types/chai-spies": "^1.0.3",
     "@types/sequelize": "^4.28.11",
+    "boom": "^7.3.0",
     "chai-spies": "^1.0.0",
     "dotenv": "^16.0.0",
+    "joi": "^17.6.0",
     "pg": "^8.7.3",
     "pino": "^7.8.0",
     "pino-postgres": "^0.0.33",
@@ -31,6 +34,7 @@
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "mocha": "^9.2.1",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "supertest": "^6.2.2"
   }
 }
