--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "test": "NODE_ENV=test mocha --require=ts-node/register --timeout=10000 test/*test.ts",
+    "test": "NODE_ENV=test mocha --require=ts-node/register --timeout=10000 test/*test.ts --exit",
     "start": "ts-node src/main.ts"
   },
   "author": "",
