--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,17 @@
 {
   "development": {
     "use_env_variable": "DATABASE_URL_DEV",
-    "dialect": "postgresql"
+    "dialect": "postgresql",
+    "logging": false
   },
   "test": {
     "use_env_variable": "DATABASE_URL_TEST",
-    "dialect": "postgresql"
+    "dialect": "postgresql",
+    "logging": false
   },
   "production": {
     "use_env_variable": "DATABASE_URL",
-    "dialect": "postgresql"
+    "dialect": "postgresql",
+    "logging": false
   }
 }
