--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
+    "connect": "ts-node src/bin/client.ts connect",
+    "logs": "ts-node src/bin/logs.ts tail",
     "test": "NODE_ENV=test mocha --require=ts-node/register --timeout=10000 test/*test.ts --exit",
     "start": "ts-node src/main.ts"
   },
@@ -15,12 +17,16 @@
     "@types/sequelize": "^4.28.11",
     "boom": "^7.3.0",
     "chai-spies": "^1.0.0",
+    "cleaners": "^0.3.12",
+    "commander": "^9.0.0",
     "dotenv": "^16.0.0",
     "joi": "^17.6.0",
     "pg": "^8.7.3",
     "pino": "^7.8.0",
     "pino-postgres": "^0.0.33",
     "sequelize": "^6.17.0",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "through2": "^4.0.2",
     "ts-node": "^10.6.0",
     "typescript": "^4.6.2",
