--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/chai-spies": "^1.0.3",
     "@types/sequelize": "^4.28.11",
     "boom": "^7.3.0",
+    "boostpow": "^1.3.5",
     "chai-spies": "^1.0.0",
     "cleaners": "^0.3.12",
     "commander": "^9.0.0",
