--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "connect": "ts-node src/bin/client.ts connect",
     "logs": "ts-node src/bin/logs.ts tail",
+    "jest": "jest --coverage",
     "test": "NODE_ENV=test mocha --require=ts-node/register --timeout=10000 test/*test.ts --exit",
     "runtest": "NODE_ENV=test mocha --require=ts-node/register $TEST --timeout=20000 --exit",
     "test:stratum": "TEST=test/stratum_test.ts npm run runtest",
@@ -13,6 +14,9 @@
   },
   "author": "",
   "license": "ISC",
+    "jest": {
+    "verbose": true
+  },
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
     "@types/chai-spies": "^1.0.3",
@@ -41,6 +45,7 @@
     "@types/node": "^17.0.21",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
+    "jest": "^27.5.1",
     "mocha": "^9.2.1",
     "sequelize-cli": "^6.4.1",
     "supertest": "^6.2.2"
