--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,5 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '14.x'
-        
-    - name: Install Dependencies
-      run: npm install
+    - uses: ArtiomTr/jest-coverage-report-action@v2
       
-    - name: Run Tests
-      run: npm test
