--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "NODE_ENV=test mocha --require=ts-node/register --timeout=10000 test/*test.ts --exit",
     "runtest": "NODE_ENV=test mocha --require=ts-node/register $TEST --timeout=20000 --exit",
     "test:stratum": "TEST=test/stratum_test.ts npm run runtest",
-    "start": "ts-node src/main.ts"
+    "start": "ts-node src/main.ts",
+    "commit": "cz"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +29,7 @@
     "pg": "^8.7.3",
     "pino": "^7.8.0",
     "pino-postgres": "^0.0.33",
+    "require-all": "^3.0.0",
     "sequelize": "^6.17.0",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
@@ -43,8 +45,14 @@
     "@types/node": "^17.0.21",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
+    "cz-conventional-changelog": "^3.3.0",
     "mocha": "^9.2.1",
     "sequelize-cli": "^6.4.1",
     "supertest": "^6.2.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
