--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sequelize": "^6.17.0",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
+    "superagent": "^7.1.2",
     "through2": "^4.0.2",
     "ts-node": "^10.6.0",
     "typescript": "^4.6.2",
