--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bsv": "^2.0.7",
     "chai-spies": "^1.0.0",
     "cleaners": "^0.3.12",
+    "clone-deep": "^4.0.1",
     "commander": "^9.0.0",
     "dotenv": "^16.0.0",
     "joi": "^17.6.0",
