feat(metrics): expose metrics via prometheus. Option for custom metrics

--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "bsv": "^2.0.7",
     "chai-spies": "^1.0.0",
     "cleaners": "^0.3.12",
+    "clone-deep": "^4.0.1",
     "commander": "^9.0.0",
     "dotenv": "^16.0.0",
     "joi": "^17.6.0",
     "pg": "^8.7.3",
     "pino": "^7.8.0",
     "pino-postgres": "^0.0.33",
+    "prom-client": "^14.0.1",
     "require-all": "^3.0.0",
     "sequelize": "^6.17.0",
     "socket.io": "^2.0.3",
