--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,7 @@ jobs:
             docker push proofofwork/boost-stratum:$CIRCLE_BRANCH
 
   deploy:
-    machine:
-      image: ubuntu-1604:202007-01
+    machine: true
     steps:
       - run:
           name: Deploy to Web Servers
