docs(swagger-api): automatically generate API docs using Swagger

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
+    "@hapi/inert": "^6.0.5",
+    "@hapi/vision": "^6.1.0",
     "@types/chai-spies": "^1.0.3",
     "@types/sequelize": "^4.28.11",
     "boom": "^7.3.0",
@@ -26,6 +28,7 @@
     "clone-deep": "^4.0.1",
     "commander": "^9.0.0",
     "dotenv": "^16.0.0",
+    "hapi-swagger": "^14.5.5",
     "joi": "^17.6.0",
     "pg": "^8.7.3",
     "pino": "^7.8.0",
