--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chai-as-promised": "^7.1.1",
     "cz-conventional-changelog": "^3.3.0",
     "mocha": "^9.2.1",
+    "prettier": "2.7.1",
     "sequelize-cli": "^6.4.1",
     "supertest": "^6.2.2"
   },
