--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "runtest": "NODE_ENV=test mocha --require=ts-node/register $TEST --timeout=20000 --exit",
     "test:stratum": "TEST=test/stratum_test.ts npm run runtest",
     "start": "ts-node src/main.ts",
-    "commit": "cz"
+    "commit": "cz",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -48,6 +49,8 @@
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "cz-conventional-changelog": "^3.3.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "mocha": "^9.2.1",
     "prettier": "2.7.1",
     "sequelize-cli": "^6.4.1",
@@ -57,5 +60,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
