--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,9 @@
 
 var path = require('path')
+require('dotenv').config();
 
 module.exports = {
-  'config':          path.resolve('config', 'config.json'),
+  'config':          path.resolve('config', 'config.js'),
   'migrations-path': path.resolve('src', 'migrations'),
   'models-path':     path.resolve('src', 'models'),
   'seeders-path':    path.resolve('src', 'seeders')
