actually upload code coverage report

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,12 @@ jobs:
           name: Run Tests
           command: npm test
       - run:
+          name: Report Code Coverage
+          command: |
+            curl -Os https://uploader.codecov.io/latest/linux/codecov
+            chmod +x codecov
+            ./codecov
+      - run:
           name: Build docker image
           command: docker build -t boost-stratum . 
       - run:
