--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ DB_HOST=database
 DB_NAME=database
 DB_USER=database
 DATABASE_URL_DEV=postgresql://database:password@database/database
-PRIVATE_KEY=privatekey
+PRIVATE_KEY_WIF=privatekey
